# esp32c6-rfid-zigbee

./: .project  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  app_http.c  app_http.h  app_web.c  app_web.h  app_wiegand.c  app_wiegand.h  app_zigbee.c  app_zigbee.h  idf_component.yml  main.c  main.c_bkup  nvs_storage.c  nvs_storage.h  rfid_reader.c  rfid_reader.h  rfid_storage.c  rfid_storage.h
